Gallery page guest-rooms,suites,Hotel-view done

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link active" href="#">Overview</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Gallery</a></li>
+                <li class="nav-item"><a class="nav-link" href="/pages/Gallery.html">Gallery</a></li>
                 <li class="nav-item"><a class="nav-link" href="/pages/Accomadation.html">Accommodations</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Dining</a></li>
             </ul>
