add tea explore  to  overview page

--- a/index.html
+++ b/index.html
@@ -63,10 +63,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link active" href="#">Overview</a></li>
+                <li class="nav-item"><a class="nav-link active" href="/index.html">Overview</a></li>
                 <li class="nav-item"><a class="nav-link" href="/pages/Gallery.html">Gallery</a></li>
                 <li class="nav-item"><a class="nav-link" href="/pages/Accomadation.html">Accommodations</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Dining</a></li>
+                <li class="nav-item"><a class="nav-link" href="/pages/Dining.html">Dining</a></li>
+                <li class="nav-item"><a class="nav-link" href="/pages/Experiences.html">Experiences</a></li>
+                <li class="nav-item"><a class="nav-link" href="/pages/Meeting.html">Meeting & Weddings</a></li>
+                <li class="nav-item"><a class="nav-link" href="/pages/Offers.html">Rates</a></li>
             </ul>
         </div>
     </div>
@@ -89,7 +92,7 @@
 <section class="container my-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="/assets/images/vojtech-bruzek-Yrxr3bsPdS0-unsplash.jpg" class="img-fluid rounded" alt="Hotel Room">
+            <img src="/assets/images/vojtech-bruzek-Yrxr3bsPdS0-unsplash.jpg" class="img-fluid rounded" alt="Hotel Room" >
         </div>
         <div class="col-md-6">
             <h2>Book Your Stay</h2>
@@ -304,6 +307,20 @@
   </div>
 </section>
 <br>
+
+<div class="card mb-3" style="max-width: 90%; margin-left: 5%; background-color: yellowgreen;">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="https://media.istockphoto.com/id/521431466/photo/tea-pickers-in-nuwara-eliya-sri-lanka.jpg?s=612x612&w=0&k=20&c=RKzBGFFBXLg5gXfhut6e6UdYmIZcZTwHm6IYAnNZ3vc=" class="img-fluid rounded-start" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h4 class="card-title"><b>Explore the Traditions of Ceylon Tea</b></h4>
+          <p class="card-text">Handunugoda Tea Estate, which sits at a low elevation of 100 feet above sea level in Sri Lanka, is arguably the lowest estate in the world. Surrounded by a lush forest, the estate continues to use centuries-old machinery and is best known for producing ‘virgin white tea’ – a tea inspired by the ancient Chinese tradition of cutting the leaves from the plant with golden scissors which then remain untouched by humans until they reach the teacup.Step into the world of timeless elegance and rich heritage as you explore the traditions of Ceylon tea. Grown in the misty highlands of Sri Lanka, Ceylon tea is renowned for its vibrant flavor, aromatic character, and deep cultural roots. From the lush green plantations to the graceful art of tea brewing, every cup tells a story of tradition,  and serenity. At our hotel, guests can immerse themselves in this iconic Sri Lankan experience through curated tea tastings, and authentic high tea rituals that celebrate the island’s legacy</p>
+        </div>
+      </div>
+    </div>
+  </div>
 <footer class="footer">
     <div class="footer-container">
         <!-- Links -->
