created events page

--- a/pages/Experiences.html
+++ b/pages/Experiences.html
@@ -34,7 +34,7 @@
             <p class="lead">Luxury accommodation with an Ocean view</p>
         </div>
     </header>
-    <img src="/assets/images/ChatGPT Image Apr 7, 2025, 11_14_40 AM.png" class="img-fluid" alt="home" style="width: 100%; height: auto;">
+    <img src="/assets/images/ChatGPT Image Apr 7, 2025, 11_14_40 AM.png" class="img-fluid" alt="home" style="width: 100%; height: auto; position: relative; overflow: hidden;z-index: 0;">
       <section class="hero">
         <p class="text-uppercase text-secondary small">WELCOME TO AHASRA RESORT & SPA</p>
         <div class="underline"></div>
