--- a/pages/Accomadation.html
+++ b/pages/Accomadation.html
@@ -36,8 +36,11 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="/index.html">Overview</a></li>
                     <li class="nav-item"><a class="nav-link" href="/pages/Gallery.html">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Accommodations</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Dining</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/Accomadation.html">Accommodations</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/Dining.html">Dining</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/Experiences.html">Experiences</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/Meeting.html">Meetings & Weddings</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/Rates.html">Rates</a></li>
                 </ul>
             </div>
         </div>
