--- a/pages/Dining.html
+++ b/pages/Dining.html
@@ -23,7 +23,10 @@
                     <li class="nav-item"><a class="nav-link active" href="#">Overview</a></li>
                     <li class="nav-item"><a class="nav-link" href="/pages/Gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link" href="/pages/Accomadation.html">Accommodations</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Dining</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/Dining.html">Dining</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/Experiences.html">Experiences</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/Meeting.html">Meetings & Weddings</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/Rates.html">Rates</a></li>
                 </ul>
             </div>
         </div>
