--- a/pages/Experiences.html
+++ b/pages/Experiences.html
@@ -22,7 +22,7 @@
                     <li class="nav-item"><a class="nav-link" href="/pages/Dining.html">Dining</a></li>
                     <li class="nav-item"><a class="nav-link" href="/pages/Experiences.html">Experiences</a></li>
                     <li class="nav-item"><a class="nav-link" href="/pages/Meeting.html">Meeting & Weddings</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/Offers.html">Rates</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/Rates.html">Rates</a></li>
                 </ul>
             </div>
         </div>
