--- a/pages/Accomadation.html
+++ b/pages/Accomadation.html
@@ -6,6 +6,8 @@
     <title>Accomadation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="icon" href="/assets/images/logo-removebg-preview.png"/>
+
     <style>
         body {
     font-family: Arial, sans-serif;
