--- a/pages/Dining.html
+++ b/pages/Dining.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/accomadation.css">
+    <link rel="icon" href="/assets/images/logo-removebg-preview.png"/>
 
 </head>
 <body>
