--- a/pages/Meeting.html
+++ b/pages/Meeting.html
@@ -6,6 +6,8 @@
     <title>meeting</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="/assets/images/logo-removebg-preview.png"/>
+
   <style>
     .highlight-border {
       border-left: 2px solid #a80000;
