--- a/pages/Rates.html
+++ b/pages/Rates.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rates</title>
+    <link rel="icon" href="/assets/images/logo-removebg-preview.png"/>
+
 </head>
 <body>
     
